--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "next": "15.0.3",
     "react": "^18.2.0",
